yaml/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/test-net: "true"
        io.kompose.service: proxy
    spec:
      containers:
        - image: climate-change-v2_proxy
          name: proxy
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
