yaml/plone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plone-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: redis
    role: leader
    tier: backend
