yaml/ccv2-ingress-volto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ccv2-volto
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/server-snippet: |
      gzip on;
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: beta-auth
    nginx.ingress.kubernetes.io/auth-realm: "https://beta2.climate-change.data.gov.uk"
#    nginx.ingress.kubernetes.io/configuration-snippet: |-
#      satisfy any;
#      allow 172.17.0.1/32;
#      deny all;
spec:
  tls:
    - hosts:
        - beta2.climate-change.data.gov.uk
      secretName: beta2-cert
  rules:
    - host: beta2.climate-change.data.gov.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: volto
                port:
                  number: 3000
